syntax = "proto3";

package grpctesting;

message EmptyRequest {}
message EmptyResponse {}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service EchoService {
    rpc Echo(EchoRequest) returns (EchoResponse);
    rpc Empty(EmptyRequest) returns (EmptyResponse);
}